--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Configurando .Net 5...
+    - name: Configurando .Net 7...
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.201
+        dotnet-version: 7.0.x
     - name: Instalando dependencias..
       run: dotnet restore
     - name: Compilando...
